# Pealn

./: .gitignore  CONTRIBUTION.md  Cargo.toml  README.md
benches/: README.md  pealn_benchmark.rs
docs/: README.md
src/: PeaColor.rs  PeaParse.rs  PeaStyle.rs  lib.rs  main.rs  pea_parse.rs
src/pea_compiled/: color_mode.rs  mod.rs  multi_value.rs  pea_code_block.rs  pea_color.rs  pea_modifier.rs  pea_modifiers.rs  pea_styles.rs
testapp/: Cargo.toml
testapp/src/: main.rs
