[package]
name = "pealn"
version = "0.3.0"
authors = ["Subham Shaw , India <shaw.subham14.05.2002@gmail.com>"]
description = "Intuitive way to print colored and styled text to console ,use predefined and RGB colors , use text styles , using ANSI #terminal #console #colors #text #print #pealn #win #windows #ansi"
repository = "https://github.com/subham008/Pealn"
license = "MIT"
edition = "2024"
readme = "README.md"
[dependencies]
regex = "1.11.1"
syn = { version = "2", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true