[package]
name = "pealn"
version = "0.4.1"
authors = ["Subham Shaw , India <shaw.subham14.05.2002@gmail.com>"]
description = "Intuitive way to print colored and styled text to console ,use predefined and RGB colors , use text styles , using ANSI, #terminal #console #colors #text #print #pealn #win #windows #ansi"
repository = "https://github.com/subham008/Pealn"
license = "MIT"
edition = "2024"
readme = "README.md"
[dependencies]
regex = "1.11.3"
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.41"

[dev-dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
termcolor = "1.4.1"
criterion = "0.7.0"

[[bench]]
name = "pealn_benchmark"
harness = false

[lib]
proc-macro = true
